[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/GUI/Meters/251.png" type="Texture" id=1]
[ext_resource path="res://Health_Vial.gd" type="Script" id=2]
[ext_resource path="res://Sprites/GUI/Meters/Health_Vial_Meter_Outline.png" type="Texture" id=3]
[ext_resource path="res://Sprites/GUI/Meters/Health_Vial_Meter_Mask.png" type="Texture" id=4]
[ext_resource path="res://Sprites/GUI/Meters/Health_Vial_Player_Background.png" type="Texture" id=5]

[node name="Health" type="Control"]
margin_right = 318.0
margin_bottom = 80.0
rect_min_size = Vector2( 318, 80 )
rect_scale = Vector2( 2, 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 159.0
margin_bottom = 33.0
rect_min_size = Vector2( 159, 33 )
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vial_Outline" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 159, 33 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inside_Border" type="Control" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
rect_min_size = Vector2( 149, 23 )
rect_clip_content = true

[node name="Vial_Inside" type="TextureRect" parent="Background/Inside_Border"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 8.5
margin_right = -5.0
margin_bottom = -8.5
rect_min_size = Vector2( 139, 6 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="."]
margin_top = 66.0
margin_right = 159.0
margin_bottom = 71.0
rect_min_size = Vector2( 159, 5 )
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
